fixed alignment for each section

--- a/style.css
+++ b/style.css
@@ -1,109 +1,197 @@
+/* -------  General Styles ------- */
 
+body {
+  font-family: "Lato", sans-serif;
+  color: #6b1a22;
+  width: fit-content;
+}
+
+h2 {
+  font-size: 26px;
+  font-weight: 400;
+  margin: 0 10px 15px 10px;
+  text-align: center;
+}
+
+h3 {
+  font-size: 18px;
+  font-weight: 500;
+}
+
+p {
+  line-height: 1.5em;
+  margin: 0;
+}
+
+section {
+  padding: 20px;
+}
+
+section.alternate-background {
+  background-color: #a35766;
+  color: #ecdbc9;
+}
+
+main img {
+  width: 100%;
+}
+
+
+
+/* -------  Navigation ------- */
 
 header {
-    /* Sets background color to blue. */
-    background-color: #0B1C51;
-    /* Adds 40 pixels of space under the header
-       so that the main content isn't so close
-       to the navigation. */
-    margin-bottom: 40px;
+  background-color: #83092e;
+  text-align: center;
+  display: flex;
+  flex-direction: column; 
+}
+
+header h1 {
+  font-family: "Tangerine", cursive;
+  font-size: 48px;
+  color: #ecdbc9;
+  justify-content: center;
+  display: flex;
+ /* Sets 14 pixels of margin above and below the `h1` and sets 
+     0 pixels of margin to the left and right. */
+ margin: 14px 0;
+ /* Removes or sets 0 pixels of padding above the `h1`. */
+ padding-top: 0;
+}
+
+
+header nav {
+  display: flex;
+  justify-content: center;
+}
+
+header nav ul {
+  display: flex;
+  padding-left: 0;
+  list-style-type: none;
+}
+
+header nav ul li a {
+  color: #ecdbc9;
+  text-decoration: none;
+  padding: 0 20px 0 0;
+  user-select: none;
+}
+
+header nav ul li a:hover {
+  color: #bdbdbd;
+  text-decoration: none;
+}
+
+header nav ul li:last-child a {
+  /* Removes the margin to the right of the last anchor tag 
+     so that the nav appears centered. */
+  margin-right: 0;
+}
+
+/* -------  Join Form ------- */
+form {
+  border: 2px solid #6b1a22;
+  padding: 10px;
+}
+
+form ul {
+  padding: 0px;
+}
+
+form li {
+  display: flex;
+}
+
+form label {
+  font-weight: bold;
+  flex: 1;
+}
+
+form select,
+form input {
+  margin-bottom: 20px;
+  width: 180px;
+}
+
+form button {
+  background-color: #83092e;
+  border: none;
+  color: #fff;
+  font-size: 24px;
+  padding: 15px;
+  width: 100%;
+}
+
+/* -------  Footer ------- */
+
+footer {
+  background-color: #83092e;
+}
+
+footer p {
+  color: #fff;
+  text-align: center;
+  padding: 20px;
+}
+
+/* ---  Groups & Items --- (Mobile First)*/
+
+.group {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.item {
+  flex: 1;
+  margin: 10px;
+}
+
+.item-double {
+  flex: 2;
+  margin: 10px;
+}
+
+#join .item { 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+/* Groups & Items  (Desktop) */
+@media all and (min-width: 800px) {
+  header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0 30px;
   }
 
   header h1 {
-    /* Sets text color to white. */
-    color: #fff;
-    /* Centers the text. */
-    text-align: center;
-    /* Removes the default margin and spacing around the `h1` element. */
-    margin: 0;
-    /* Pushes the text down 20 pixels from the top of the page. */
-    padding-top: 20px;
-  }
+   /* Sets 14 pixels of margin above and below the `h1` and sets 
+       0 pixels of margin to the left and right. */
+   margin: 14px 0;
+   /* Removes or sets 0 pixels of padding above the `h1`. */
+   padding-top: 0;
+ }
 
   header nav {
-    /* Changes the display property from its default to `flex`. */
+    margin-top: 8px;
+  }
+
+  .group {
     display: flex;
-    /* Centers an element defined as `display: flex`. */
+    flex-direction: row;
+    margin-bottom: 10px;
+  }
+
+  .item {
+    flex: 1;
+    margin: 10px;
     justify-content: center;
   }
-
-  header nav ul {
-    /* Changes the display property from its default to `flex`. */
-    display: flex;
-    /*
-      You want the navigation to display in a single row. This is 
-      the default value for `display: flex`, so you don't need
-      to define its `flex-direction` in this case.
-    */
-  
-    /*
-      Removes the default padding to the left of the
-      unordered list.
-    */
-    padding-left: 0;
-  
-    /*
-      Removes the bullet points from the list items within the 
-      unordered list.
-    */
-    list-style: none;
-  }
-
-  header nav ul li a {
-    /*set nav font to Montserrat */
-    font-family: Montserrat; 
-    /* The link color is white. */
-    color: #fff;
-    /* Removes the underline from the link. */
-    text-decoration: none;
-    /* Applies 20 pixels of margin to the right of each link 
-       creating a visual gap between the navigation links. */
-    margin: 0 20px 0 0;
-  }
-
-  header nav ul li:last-child a {
-    /* Removes the margin to the right of the last anchor tag 
-       so that the nav appears centered. */
-    margin-right: 0;
-  }
-
-  /* When a web browser is larger than 600 pixels,
-   apply these rules. */
-@media all and (min-width: 600px) {
-    header {
-      /* Changes the default setting from `block` to `flex`. */
-      display: flex;
-      /* Pushes the items (the title and nav) to the far sides of the 
-         browser with space between them. */
-      justify-content: space-between;
-      /* Adds 0 pixels padding top and bottom, and 30 pixels padding 
-         left and right. */
-      padding: 0 30px;
-    }
-  
-    header h1 {
-       font-size: 48px;
-      /* Sets 14 pixels of margin above and below the `h1` and sets 
-          0 pixels of margin to the left and right. */
-      margin: 14px 0;
-      /* Removes or sets 0 pixels of padding above the `h1`. */
-      padding-top: 0;
-    }
-  
-    header nav {
-      /*
-        Pushes the navigation container down by 8 pixels to make it
-        present a little better visually within the space.
-      */
-      margin-top: 8px;
-    }
-    /* Users cannot hover on mobile devices, so that is why you
-       implement this behavior only for larger screens. */
-    header nav ul li a:hover {
-      /* Targets the change when a user holds the pointer over the anchor tag 
-         (link) within the list items within the unordered list that 
-         is within the navigation that is within the header. */
-      color: #bdbdbd;
-    }
-  }
+}
 
